Output: space example from edges, prevent overflow.

--- a/css/editable-css.css
+++ b/css/editable-css.css
@@ -61,6 +61,9 @@ pre[class*='language-'] {
     float: right;
     background-color: #fff;
     width: 45%;
+    overflow: hidden;
+    box-shadow: 2px 2px 5px -2px rgba(0, 0, 0, .1);
+    padding: 1em;
 }
 
 .output section {
